Better style depictions

--- a/depictions/com.dbdexter.cirrus/index.html
+++ b/depictions/com.dbdexter.cirrus/index.html
@@ -1,19 +1,18 @@
 <html>
 <head>
-    <title>Brackets for Messages</title>
+    <title>Cirrus</title>
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0"/>
     <base target="_blank"/>
     <script type="text/javascript" src="http://beta.tmnlsthrn.com/css/menes.js"></script>
     <link rel="stylesheet" type="text/css" id="stylesheet">
-    <script type="text/javascript">var agent=navigator.userAgent;var ios=agent.match(/.*; CPU (?:iPhone )?OS ([0-9_]*) like Mac OS X[;)]/);ios=ios==null?'6.0':ios[1].replace(/_/g,'.');var stylesheet=$("#stylesheet");if(ios.match(/^[78]($|\.)/)!=null){stylesheet.href("http://beta.tmnlsthrn.com/css/ios78.css")}else{stylesheet.href("http://beta.tmnlsthrn.com/css/legacy.css")}</script>
-</head>
+    <script type="text/javascript">var agent=navigator.userAgent;var ios=agent.match(/.*; CPU (?:iPhone )?OS ([0-9_]*) like Mac OS X[;)]/);ios=ios==null?'6.0':ios[1].replace(/_/g,'.');var stylesheet=$("#stylesheet");stylesheet.href("http://beta.tmnlsthrn.com/css/fullwidth.css")</script></head>
 
 <script type="text/javascript">
     if (navigator.userAgent.search(/Cydia/) != -1)
     document.write('<style type="text/css"> body { background: none !important; } .header { display: none !important; } </style>');
     </script>
 
-<body class="pinstripe">
+<body class="white">
     <panel>
 
         <fieldset class="iosver">
@@ -25,14 +24,24 @@
     <label>Description</label>
         <fieldset>
             <div>
-                <p>Bracket shaped Message bubbles. Please make sure you have Messages Customiser beta from chewitt.me/repo/ and enable Bubble Outlines.</p>
+                <p>WeatherPeek-style lockscreen weather, now on iOS 9!</p>
+		<p>Current features:</p>
+		<ul>
+			<li>Current temperature and weather</li>
+			<li>6h max/min temperature</li>
+			<li>Temperature forecast every 3 hours</li>
+			<li>Adaptive color based on background</li>
+			<li>Current location weather</li>
+			<li>Celsius-Farenheit units</li>
+			<li>Custom update interval (30 mins - 6 hrs)</li>
+		</ul>
             </div>
         </fieldset>
 
     <label>Screenshots</label>
         <fieldset>
-            <a><div><div><label><p><a href="http://dbdexter-dev.github.io/depictions/com.dbdexter.cirrus/cirrusLightBG.png">Screenshot 1</a></p></label></div></div></a>
-            <a><div><div><label><p><a href="http://dbdexter-dev.github.io/depictions/com.dbdexter.cirrus/cirrusDarkBG.png">Screenshot 2</a></p></label></div></div></a>
+            <a><div><div><label><p><a href="http://dbdexter-dev.github.io/depictions/com.dbdexter.cirrus/screenshots/cirrusLightBG.png">Light wallpaper</a></p></label></div></div></a>
+            <a><div><div><label><p><a href="http://dbdexter-dev.github.io/depictions/com.dbdexter.cirrus/screenshots/cirrusDarkBG.png">Dark wallpaper</a></p></label></div></div></a>
         </fieldset>
 	
     <label>Dependencies</label>
