--- a/depictions/com.dbdexter.cirrus/index.html
+++ b/depictions/com.dbdexter.cirrus/index.html
@@ -51,7 +51,8 @@
 
     <label>Changelog</label>
         <fieldset>
-            <a><div><div><label><p>Initial release</p></label></div></div></a>
+            <a><div><div><label><p>0.0.1b1: Initial release</p></label></div></div></a>
+	    <a><div><div><label><p>0.0.1b2: Fixed colors on lockscreen when there are notifications visible</p></label></div></div></a>
         </fieldset>
         
 </panel>
