Added known buglist

--- a/depictions/com.dbdexter.cirrus/index.html
+++ b/depictions/com.dbdexter.cirrus/index.html
@@ -54,7 +54,16 @@
             <a><div><div><label><p>0.0.1b1: Initial release</p></label></div></div></a>
 	    <a><div><div><label><p>0.0.1b2: Fixed colors on lockscreen when there are notifications visible</p></label></div></div></a>
         </fieldset>
-        
+
+    <label>Known issues</label>
+    	<fieldset>
+	    <a><div><div><label><ul>
+		    <li>Labels aren't immediately updated when settings are changed</li>
+		    <li>Locations outside Europe might not work</li>
+		    <li>Current time on the lockscreen reverts its color when a notification is visible and the time changes</li>
+		    <li>There are two instances on the lockscreen instead of one</li>
+	    </ul></label></div></div></a>
+	</fieldset>
 </panel>
 <script src="http://dbdexter-dev.github.io/assets/js/iosver.js" async></script>
 </body>
