--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-
+<head>
+	<title>dbdexter's repo</title>
+</head>
 <body>
-	<h1>Hello, there!</h1>
-	<p>This is a Cydia repo</p>
+	<h1>Hello, welcome to my Cydia repository!</h1>
+	<p>Add <a href="https://dbdexter-dev.github.io">https://dbdexter-dev.github.io</a> to your sources</p>
 </body>
 
 </html>
