--- a/depictions/com.dbdexter.cirrus/index.html
+++ b/depictions/com.dbdexter.cirrus/index.html
@@ -57,12 +57,13 @@
 
     <label>Known issues</label>
     	<fieldset>
-	    <a><div><div><label><ul>
+	    <a><div><div><label><p>
+	    	<ul>
 		    <li>Labels aren't immediately updated when settings are changed</li>
 		    <li>Locations outside Europe might not work</li>
 		    <li>Current time on the lockscreen reverts its color when a notification is visible and the time changes</li>
-		    <li>There are two instances on the lockscreen instead of one</li>
-	    </ul></label></div></div></a>
+	    	</ul>
+	    </p></label></div></div></a>
 	</fieldset>
 </panel>
 <script src="http://dbdexter-dev.github.io/assets/js/iosver.js" async></script>
