Added link to add to cydia sources directly

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 	<title>dbdexter's repo</title>
 </head>
 <body>
-	<h1>Hello, welcome to my Cydia repository!</h1>
-	<p>Add <a href="https://dbdexter-dev.github.io">https://dbdexter-dev.github.io</a> to your sources</p>
+	<center>
+		<h1>DBDexter's  Cydia repository</h1>
+		<p>Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://dbdexter-dev.github.io">dbdexter-dev.github.io</a> to your sources</p>
+	</center>
 </body>
 
 </html>
