--- a/depictions/com.dbdexter.cirrus/index.html
+++ b/depictions/com.dbdexter.cirrus/index.html
@@ -54,6 +54,7 @@
             <a><div><div><label><p>0.0.1b1: Initial release</p></label></div></div></a>
 	    <a><div><div><label><p>0.0.1b2: Fixed colors on lockscreen when there are notifications visible</p></label></div></div></a>
 	    <a><div><div><label><p>0.0.1b3: Fixed location issues</p></label></div></div></a>
+	    <a><div><div><label><p>0.0.1b4: Fixed weather not updating</p></label></div></div></a>
         </fieldset>
 
     <label>Known issues</label>
@@ -61,7 +62,6 @@
 	    <a><div><div><label><p>
 	    	<ul>
 		    <li>Current time on the lockscreen reverts its color when a notification is visible and the time changes</li>
-		    <li>Labels sometimes don't update themselves unless device is unlocked and then locked</li>
 	    	</ul>
 	    </p></label></div></div></a>
 	</fieldset>
