--- a/depictions/com.dbdexter.cirrus/index.html
+++ b/depictions/com.dbdexter.cirrus/index.html
@@ -28,8 +28,8 @@
 		<p>Current features:</p>
 		<ul>
 			<li>Current temperature and weather</li>
-			<li>6h max/min temperature</li>
-			<li>Temperature forecast every 3 hours</li>
+			<li>Daily max/min temperature</li>
+			<li>Hourly temperature forecast</li>
 			<li>Adaptive color based on background</li>
 			<li>Current location weather</li>
 			<li>Celsius-Farenheit units</li>
@@ -55,6 +55,7 @@
 	    <a><div><div><label><p>0.0.1b2: Fixed colors on lockscreen when there are notifications visible</p></label></div></div></a>
 	    <a><div><div><label><p>0.0.1b3: Fixed location issues</p></label></div></div></a>
 	    <a><div><div><label><p>0.0.1b4: Fixed weather not updating</p></label></div></div></a>
+	    <a><div><div><label><p>0.1b1: Switched to iOS weather framework: hourly temperature + daily max/min</p></label></div></div></a>
         </fieldset>
 
     <label>Known issues</label>
