--- a/depictions/com.dbdexter.cirrus/index.html
+++ b/depictions/com.dbdexter.cirrus/index.html
@@ -32,7 +32,6 @@
 			<li>Hourly temperature forecast</li>
 			<li>Adaptive color based on background</li>
 			<li>Current location weather</li>
-			<li>Celsius-Farenheit units</li>
 			<li>Custom update interval (30 mins - 6 hrs)</li>
 		</ul>
             </div>
@@ -56,14 +55,13 @@
 	    <a><div><div><label><p>0.0.1b3: Fixed location issues</p></label></div></div></a>
 	    <a><div><div><label><p>0.0.1b4: Fixed weather not updating</p></label></div></div></a>
 	    <a><div><div><label><p>0.1b1: Switched to iOS weather framework: hourly temperature + daily max/min</p></label></div></div></a>
+	<a><div><div><label><p>0.1b2: Fixed colors not behaving correctly + other minor fixes</p></label></div></div></a>
         </fieldset>
 
     <label>Known issues</label>
     	<fieldset>
 	    <a><div><div><label><p>
-	    	<ul>
-		    <li>Current time on the lockscreen reverts its color when a notification is visible and the time changes</li>
-	    	</ul>
+	    	(No known issues)
 	    </p></label></div></div></a>
 	</fieldset>
 </panel>
