--- a/depictions/com.dbdexter.cirrus/index.html
+++ b/depictions/com.dbdexter.cirrus/index.html
@@ -55,7 +55,8 @@
 	    <a><div><div><label><p>0.0.1b3: Fixed location issues</p></label></div></div></a>
 	    <a><div><div><label><p>0.0.1b4: Fixed weather not updating</p></label></div></div></a>
 	    <a><div><div><label><p>0.1b1: Switched to iOS weather framework: hourly temperature + daily max/min</p></label></div></div></a>
-	<a><div><div><label><p>0.1b2: Fixed colors not behaving correctly + other minor fixes</p></label></div></div></a>
+	    <a><div><div><label><p>0.1b2: Fixed colors not behaving correctly + other minor fixes</p></label></div></div></a>
+	    <a><div><div><label><p>0.1b3: Switched theos fork + Bugfixes</p></label></div></div></a>
         </fieldset>
 
     <label>Known issues</label>
