--- a/depictions/com.dbdexter.cirrus/index.html
+++ b/depictions/com.dbdexter.cirrus/index.html
@@ -57,6 +57,7 @@
 	    <a><div><div><label><p>0.1b1: Switched to iOS weather framework: hourly temperature + daily max/min</p></label></div></div></a>
 	    <a><div><div><label><p>0.1b2: Fixed colors not behaving correctly + other minor fixes</p></label></div></div></a>
 	    <a><div><div><label><p>0.1b3: Switched theos fork + Bugfixes</p></label></div></div></a>
+	    <a><div><div><label><p>0.2: Added ColorFlow support + Fixed 12/24h mode</p></label></div></div></a>
         </fieldset>
 
     <label>Known issues</label>
