Added BetterShutdown + GrabberTime, Cirrus updated to v0.3

--- a/depictions/bettershutdown/index.html
+++ b/depictions/bettershutdown/index.html
@@ -39,8 +39,8 @@
 
     <label>Screenshots</label>
         <fieldset>
-            <a><div><div><label><p><a href="https://dbdexter-dev.github.io/depictions/cirrus/screenshots/cirrusLightBG.png">Light wallpaper</a></p></label></div></div></a>
-            <a><div><div><label><p><a href="https://dbdexter-dev.github.io/depictions/cirrus/screenshots/cirrusDarkBG.png">Dark wallpaper</a></p></label></div></div></a>
+            <a><div><div><label><p><a href="http://dbdexter-dev.github.io/depictions/com.dbdexter.cirrus/screenshots/cirrusLightBG.png">Light wallpaper</a></p></label></div></div></a>
+            <a><div><div><label><p><a href="http://dbdexter-dev.github.io/depictions/com.dbdexter.cirrus/screenshots/cirrusDarkBG.png">Dark wallpaper</a></p></label></div></div></a>
         </fieldset>
 	
     <label>Dependencies</label>
