--- a/depictions/grabbertime/index.html
+++ b/depictions/grabbertime/index.html
@@ -24,23 +24,18 @@
     <label>Description</label>
         <fieldset>
             <div>
-                <p>WeatherPeek-style lockscreen weather, now on iOS 9!</p>
+                <p>View the current time and battery charge when in landscape mode</p>
 		<p>Current features:</p>
 		<ul>
-			<li>Current temperature and weather</li>
-			<li>Daily max/min temperature</li>
-			<li>Hourly temperature forecast</li>
-			<li>Adaptive color based on background</li>
-			<li>Current location weather</li>
-			<li>Custom update interval (30 mins - 6 hrs)</li>
+			<li>Clock</li>
+			<li>Battery indicator</li>
 		</ul>
             </div>
         </fieldset>
 
     <label>Screenshots</label>
         <fieldset>
-            <a><div><div><label><p><a href="https://dbdexter-dev.github.io/depictions/cirrus/screenshots/cirrusLightBG.png">Light wallpaper</a></p></label></div></div></a>
-            <a><div><div><label><p><a href="https://dbdexter-dev.github.io/depictions/cirrus/screenshots/cirrusDarkBG.png">Dark wallpaper</a></p></label></div></div></a>
+            <a><div><div><label><p><a href="https://dbdexter-dev.github.io/depictions/grabbertime/screenshots/grabbertime.png"></a></p></label></div></div></a>
         </fieldset>
 	
     <label>Dependencies</label>
@@ -50,15 +45,9 @@
 
     <label>Changelog</label>
         <fieldset>
-            <a><div><div><label><p>0.0.1b1: Initial release</p></label></div></div></a>
-	    <a><div><div><label><p>0.0.1b2: Fixed colors on lockscreen when there are notifications visible</p></label></div></div></a>
-	    <a><div><div><label><p>0.0.1b3: Fixed location issues</p></label></div></div></a>
-	    <a><div><div><label><p>0.0.1b4: Fixed weather not updating</p></label></div></div></a>
-	    <a><div><div><label><p>0.1b1: Switched to iOS weather framework: hourly temperature + daily max/min</p></label></div></div></a>
-	    <a><div><div><label><p>0.1b2: Fixed colors not behaving correctly + other minor fixes</p></label></div></div></a>
-	    <a><div><div><label><p>0.1b3: Switched theos fork + Bugfixes</p></label></div></div></a>
-	    <a><div><div><label><p>0.2: Added ColorFlow support + Fixed 12/24h mode</p></label></div></div></a>
-		<a><div><div><label><p>0.3: Fixed temperature forecast not behaving properly</p></label></div></div></a>
+			<a><div><div><label><p>0.1b1: Initial release</p></label></div></div></a>	
+			<a><div><div><label><p>0.1b2: Fixed clock localization</p></label></div></div></a>
+			<a><div><div><label><p>0.2: Added battery indicator and improved legibility</p></label></div></div></a>
         </fieldset>
 
     <label>Known issues</label>
