Trying to fix only one package showing

--- a/depictions/cirrus/index.html
+++ b/depictions/cirrus/index.html
@@ -68,6 +68,6 @@
 	    </p></label></div></div></a>
 	</fieldset>
 </panel>
-<script src="http://dbdexter-dev.github.io/assets/js/iosver.js" async></script>
+<script src="https://dbdexter-dev.github.io/assets/js/iosver.js" async></script>
 </body>
 </html>
